<resources>
    <string name="app_name">ValNotes</string>
    <string name="notes">Notes</string>
    <string name="archive">Archive</string>
    <string name="trash">Trash</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="created">Created: %1$s</string>
    <string name="updated">Updated: %1$s</string>
    <string name="search_colon">Search: %1$s</string>
    <string name="note_image_desc">It shows an image attached to a note.</string>
    <string name="add_fab_desc">It shows buttons which will allow to show add note screen</string>
    <string name="photo">Photo</string>
    <string name="checklist">Checklist</string>
    <string name="text_note">Text note</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_by_title">Sort by title</string>
    <string name="sort_by_date_created">Sort by creation date</string>
    <string name="sort_by_date_updated">Sort by last modification date</string>
    <string name="sort_by_reminder_date">Sort by reminder date</string>
    <string name="reduced_view">Reduced view</string>
    <string name="expanded_view">Expanded view</string>
    <string name="cancel_search_description">It clears search query.</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="add_reminder_desc">It shows a screen for picking a date for a reminder.</string>
    <string name="add_reminder">Add reminder</string>
    <string name="category">Category</string>
    <string name="add_tags">Add tags</string>
    <string name="share">Share</string>
    <string name="toggle_checklist">Toggle checklist</string>
    <string name="lock">Lock</string>
    <string name="discard_changes">Discard changes</string>
    <string name="info">Info</string>
    <string name="attach_image">Attach image</string>

    <string name="select_action">Select Action</string>
    <string name="select_photo_from_gallery">Select photo from Gallery</string>
    <string name="capture_photo_from_camera">Capture photo from Camera</string>
    <string name="image_content_desc">It represents an image attached to a note</string>
    <string name="no_items">No items</string>
    <string name="note_archived">Note archived</string>
    <string name="undo">UNDO</string>
    <string name="note_trashed">Note moved to trash</string>
    <string name="load_error">Load error</string>
    <string name="note_restored">Note restored</string>
    <string name="empty_trash">Empty trash</string>
    <string name="trash_emptied">Trash emptied</string>
    <string name="checklist_message">Will be implemented soon</string>
    <string name="note_updated">Note updated</string>
    <string name="empty_note_discarded">Empty note discarded</string>
    <string name="add_note">Add note</string>
    <string name="edit_note">Edit note</string>
    <string name="app_drawer_header_desc">App drawer header</string>
    <string name="time_picker_title">Select Alarm Time\</string>
    <string name="try_again">Try again</string>
    <string name="reminder_set_for">Reminder set for %1$s</string>
    <string name="remove_reminder">Remove reminder?</string>
    <string name="ok">OK</string>
    <string name="reminder_image_desc">It shows that a note has a reminder</string>
</resources>