<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:icon="@drawable/sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:id="@+id/action_sort_by_title"
                android:title="@string/sort_by_title" />

            <item
                android:id="@+id/action_sort_by_date_created"
                android:title="@string/sort_by_date_created" />

            <item
                android:id="@+id/action_sort_by_date_updated"
                android:title="@string/sort_by_date_updated" />

        </menu>

    </item>

    <item
        android:id="@+id/action_change_view"
        android:title="@string/reduced_view"
        app:showAsAction="never" />

</menu>